<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/main" />
        <item
            android:id="@+id/add_item"
            android:icon="@drawable/ic_add_circle_outline_black_24dp"
            android:title="@string/add_item" />
        <item
            android:id="@+id/my_machine"
            android:icon="@drawable/ic_settings_input_component_black_24dp"
            android:title="@string/my_machine" />
        <item
            android:id="@+id/nav_need_fix"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/need_fix" />

        <item
            android:id="@+id/language"
            android:icon="@drawable/ic_settings_input_component_black_24dp"
            android:title="@string/lang" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_lock_outline_black_24dp"
            android:title="@string/log_out" />
    </group>


</menu>
