<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Register"
    android:background="@color/white">
    <FrameLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

    <LinearLayout
        android:layout_width="287dp"
        android:layout_height="300dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:weightSum="1"
        android:background="@color/bnafseg"
        android:padding="@dimen/dimen_10"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/user_name"
            android:background="@color/white"
            android:layout_weight="0.10"

            android:gravity="center"/>

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:layout_marginTop="@dimen/dimen_10"
            android:background="@color/white"
            android:layout_weight="0.13"
            android:hint="@string/phone"
            android:gravity="center"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/dimen_10"
            android:background="@color/white"
            android:layout_weight="0.18"
            android:hint="@string/email"

            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailerror"
            android:visibility="gone"
            android:textSize="15dp"
            android:gravity="center"
            android:textColor="@color/red"
            android:text="@string/error_email"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/dimen_10"
            android:background="@color/white"
            android:layout_weight="0.14"
            android:hint="@string/password"
            android:gravity="center"/>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/passerror"
    android:visibility="gone"
    android:textSize="15dp"
    android:gravity="center"
    android:textColor="@color/red"
    android:text="@string/error_password"/>


        <Button
            android:id="@+id/register"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginTop="@dimen/dimen_20"
            android:background="@color/colorAccent"
            android:textStyle="bold"
            />
    </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"
            />

    </FrameLayout>
</android.support.constraint.ConstraintLayout>
