<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_10"
    android:background="#234d6e"
    android:elevation="15dp"
    android:layout_margin="@dimen/dimen_10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/dimen_10">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name_of_machine"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/catName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/dimen_10">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/model"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/modelName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_margin="@dimen/dimen_10">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/number_of_hour_work"

                android:textColor="@color/white"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/workHour2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="0.5"
                android:background="@color/white"
                android:ems="10"
                android:inputType="number"
                android:padding="5dp"
                android:layout_marginLeft="@dimen/dimen_10"
                />
        </LinearLayout>
        <Button
            android:id="@+id/addButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/add"
            android:layout_marginRight="@dimen/dimen_10"
            android:layout_marginTop="10dp"
            android:background="@color/silver"
            android:layout_margin="@dimen/dimen_10"
            android:layout_gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="@dimen/dimen_10"
            android:paddingBottom="@dimen/dimen_10"

            />


</LinearLayout>