<?xml version="1.0" encoding="utf-8"?>

    <FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:background="@color/white"


    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:clickable="true">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">
            <com.google.android.gms.ads.AdView
                android:id="@+id/adView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-4734245873783137/7104666658"
                />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="30dp"
        android:background="@color/bnafseg"
        android:elevation="15dp"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#fff"
            android:text="@string/type"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            />

        <Spinner
            android:id="@+id/spinner_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"

        android:background="@color/bnafseg"
        android:elevation="15dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#fff"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:text="@string/model1"
            />

        <Spinner
            android:id="@+id/spinner_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1" />

    </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/bnafseg"
                android:layout_marginTop="@dimen/dimen_20"

                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                >
                <EditText
                    android:id="@+id/date1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"

                    android:inputType="number"
                    android:hint="@string/enter_model_year"
                    android:layout_marginLeft="@dimen/dimen_20"
                    android:layout_marginRight="@dimen/dimen_20"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:layout_marginBottom="@dimen/dimen_10"
                    android:background="@color/white"
                    android:layout_gravity="center"
                    android:padding="@dimen/dimen_10"
                    />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar3"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/bnafseg"
        android:padding="10dp"
        android:elevation="15dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="30dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#fff"
            android:textStyle="bold"
            android:text="@string/new_or"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radiogroub"
            >

            <RadioButton
                android:id="@+id/new1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/new1"
                android:textStyle="bold"
                android:background="@color/white"
                android:layout_margin="5dp"
                android:padding="5dp"/>

            <RadioButton
                android:id="@+id/used"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/used"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:textStyle="bold"
                android:background="@color/white"/>
        </RadioGroup>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="30dp"
        android:background="@color/bnafseg"
        android:padding="10dp"
        android:elevation="10dp"
        android:id="@+id/used1"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/number_of_hour"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_marginRight="20dp"
            />

        <EditText
            android:id="@+id/workHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:background="#fff"
            android:padding="10dp"
            android:layout_marginRight="20dp"

            />


    </LinearLayout>
            <Spinner
                android:id="@+id/spinnerTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:layout_marginBottom="@dimen/dimen_20"
                android:layout_marginLeft="@dimen/dimen_20"
                android:layout_marginRight="@dimen/dimen_20"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/but"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/dimen_20"
                    android:layout_weight="1"
                    android:background="@color/bnafseg"
                    android:paddingBottom="20dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="20dp"
                    android:text="@string/add"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/dimen_10"
                    android:layout_marginRight="@dimen/dimen_10"/>

                <Button
                    android:id="@+id/end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/dimen_20"
                    android:layout_weight="1"
                    android:background="@color/bnafseg"
                    android:paddingBottom="20dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="20dp"
                    android:text="@string/end"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/dimen_10"
                    android:layout_marginRight="@dimen/dimen_10"/>

                </LinearLayout>

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-4734245873783137/1534799291"
                />
    </LinearLayout>
</ScrollView>
</FrameLayout>
